<resources>
    <string name="app_name">BG Quiebra</string>
    <string name="contrato">Contrato:</string>
    <string name="number_hint">123456789</string>
    <string name="date_hint">dd/mm/2025</string>
    <string name="main_title">VALIDAÇÃO DE QUEBRA</string>
    <string name="hint_001">Contrato</string>
    <string name="hint_002">Código</string>
    <string name="hint_003">Motivo</string>
    <string name="hint_004">Janela</string>
    <string name="hint_005">Serviço</string>
    <string name="hint_006">Técnico</string>
    <string name="hint_007">Parceira</string>
    <string name="hint_008">Casa</string>
    <string name="hint_009">Comercio</string>
    <string name="hint_010">Apartamento</string>
    <string name="hint_011">Tem Porteiro</string>
    <string name="hint_012">Nome do Porteiro</string>
    <string name="hint_013">Observações</string>
    <string name="hint_014">Copiar</string>
    <string name="hint_015">N/A</string>

    <string-array name="codigos_spinner">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
    </string-array>
</resources>